Used mongoDB template criteria